# beta_variates

./: .gitignore  CMakeLists.txt  LICENSE  README.md  beta_sample.c  libbeta.h  sample_hist.c  sample_stream.c
